--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,10 +2,11 @@
   <div class="row" *ngFor="let po of pos; let i = index;trackBy: po?.id;">
     <div class="card" style="width: 20rem;">
       <div class="card-block">
-        <h4 class="card-title">{{ po.ponum }}</h4>
-        <p class="card-text">{{ po.poheader }}</p>
+        <h4 class="card-title">{{ po.name }}</h4>
+        <p class="card-text">{{ po.podesc }}</p>
         <button (click)="logId(po.id)" class="btn btn-primary">Log ID</button>
       </div>
     </div>
   </div>
+  <button (click)="pdf()" class="btn btn-primary">PDF</button>
 </div>
