refactor nodejs routes. added emailjs api for emails.

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -9,4 +9,5 @@
     </div>
   </div>
   <button (click)="pdf()" class="btn btn-primary">PDF</button>
+  <button (click)="sendEmail()" class="btn btn-primary">SendEmail</button>
 </div>
