--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
+  <h1 i18n="User welcome|An introduction header for this app@@welcomeTitle">
     Welcome to {{title}}!
   </h1>
   <router-outlet></router-outlet>
