--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -9,5 +9,5 @@
     </div>
   </div>
   <button (click)="pdf()" class="btn btn-primary">PDF</button>
-  <button (click)="sendEmail()" class="btn btn-primary">SendEmail</button>
+  <button i18n="@@postcompt_sendemail" (click)="sendEmail()" class="btn btn-primary">SendEmail</button>
 </div>
